refactor: unread_count 서버 관리 제거, Redis lastMessageId 기반 계산으로 변경